# packages-dph

./: .gitignore  Makefile  README  Setup.hs  dph.cabal  ghc-packages  ghc-packages2  ghc.mk  ndp.cabal  ndp.mk  package.conf.in  sdist.mk
dph/: Setup.hs  dph.cabal
dph-base/: Setup.hs  dph-base.cabal
dph-base/Data/Array/Parallel/: Arr.hs  Array.hs  Base.hs  Pretty.hs  Stream.hs
dph-base/Data/Array/Parallel/Arr/: BBArr.hs  BUArr.hs
dph-base/Data/Array/Parallel/Base/: Config.hs  DTrace.hs  Debug.hs  Hyperstrict.hs  Rebox.hs  Text.hs  TracePrim.hs  Util.hs
dph-base/Data/Array/Parallel/Stream/: Flat.hs  Segmented.hs
dph-base/include/: fusion-phases.h
dph-common/: dph-common.cabal
dph-common-vseg/: dph-common-vseg.cabal
dph-common-vseg/Data/Array/Parallel/: PArray.hs  Pretty.hs
dph-common-vseg/Data/Array/Parallel/Lifted/: Closure.hs  Combinators.hs
dph-common-vseg/Data/Array/Parallel/PArray/: PData.hs  PRepr.hs  Stream.hs  Sums.hs
dph-common-vseg/examples/: Main.hs  Test.hs
dph-common-vseg/examples/smvm/: SMVMVectorised.hs
dph-common-vseg/include/: fusion-phases-vseg.h
dph-common/Data/Array/: Parallel.hs
dph-common/Data/Array/Parallel/: Lifted.hs  PArr.hs  PArray.hs  Prelude.hs  Prim.hs  VectDepend.hs
dph-common/Data/Array/Parallel/Lifted/: Closure.hs  Combinators.hs  Instances.hs  PArray.hs  Repr.hs  Scalar.hs  Selector.hs  Unboxed.hs
dph-common/Data/Array/Parallel/PArray/: Base.hs  PData.hs  PDataInstances.hs  PRepr.hs  PReprInstances.hs  Scalar.hs  ScalarInstances.hs  Types.hs
dph-common/Data/Array/Parallel/Prelude/: Base.hs  Bool.hs  Double.hs  Float.hs  Int.hs  (+1 more)
dph-examples/: LICENSE  Makefile  dph-examples.cabal  dph-examples.template
dph-examples/BarnesHut/: BarnesHutList.hs
dph-examples/MergeSort/: Main.hs  MergeSort.hs  Util.hs
dph-examples/MergeSort/LegacyList/: OddEven.hs
dph-examples/MergeSort/broken/: Reverse.hs
dph-examples/QuickHull/: Main.hs
dph-examples/QuickHull/src/: Main.hs  QuickHull.hs
dph-examples/Reverse/: Reverse.hs
dph-examples/broken/BarnesHut/: BarnesHutList.hs  Common.hs  Main.hs  Naive.hs  World.hs  cuts.hs
dph-examples/broken/Indices/dph/: IndicesVectorised.hs  Main.hs
dph-examples/broken/MergeSort/: MergeSort.hs
dph-examples/broken/Primes/: Main.hs
dph-examples/broken/Rank/dph/: Main.hs  RankVectorised.hs
dph-examples/broken/Reverse/dph/: ReverseVector.hs  ReverseVectorised.hs
dph-examples/broken/Tree/: Solver.hs
dph-examples/examples/imaginary/Primes/: Vectorised.hs
dph-examples/examples/imaginary/StringSearch/: Vectorised.hs
dph-examples/examples/imaginary/Words/: Vectorised.hs
dph-examples/examples/spectral/Pluecker/: Common.hs  CommonVectorised.hs  MainGloss.hs  Solver.hs  Vector.hs  Vectorised.hs
dph-examples/examples/spectral/Rotation/: Vectorised.hs
dph-examples/imaginary/DotProduct/: DotProductVector.hs  Main.hs
dph-examples/imaginary/DotProduct/dph/: DotProductVect.hs  DotProductVectorised.hs  Main.hs
dph-examples/imaginary/Evens/: EvensVect.hs  EvensVectorised.hs  Main.hs
dph-examples/imaginary/Evens/c/: evens.c
dph-examples/imaginary/Evens/dph/: EvensVector.hs  EvensVectorised.hs  Main.hs
dph-examples/imaginary/Indices/dph/: IndicesVectorised.hs  Main.hs
dph-examples/imaginary/Primes/: Main.hs  PrimesVector.hs  PrimesVectorised.hs
dph-examples/imaginary/Primes/dph/: PrimesVect.hs
dph-examples/imaginary/Rank/dph/: Main.hs
dph-examples/imaginary/Reverse/dph/: Main.hs  ReverseVector.hs  ReverseVectorised.hs
dph-examples/imaginary/SumSquares/: SumSquaresVector.hs
dph-examples/imaginary/SumSquares/c/: sumsq.c
dph-examples/imaginary/SumSquares/dph/: Main.hs  SumSquaresVect.hs  SumSquaresVectorised.hs
dph-examples/imaginary/Words/: Main.hs  WordsVect.hs
dph-examples/lib/: Randomish.hs  Timing.hs
dph-examples/lib/Points2D/: Generate.hs  Types.hs
dph-examples/lib/System/Console/: ParseArgs.hs
dph-examples/real/BarnesHut/: BarnesHutList.hs  Body.hs  Config.hs  Dump.hs  Main.hs  MainArgs.hs  Naive.hs  Solver.hs  Util.hs  World.hs
dph-examples/real/BarnesHut/Sim/: MainArgs.hs
dph-examples/real/NBody/: SimMain.hs  Solver.hs
dph-examples/real/NBody/Batch/: Main.hs  MainArgs.hs
dph-examples/real/NBody/Common/: Dump.hs  World.hs
dph-examples/real/NBody/Gloss/: Draw.hs  Main.hs
dph-examples/real/NBody/Sim/: Config.hs  Draw.hs  Main.hs  MainArgs.hs
dph-examples/real/Visibility/: Draw.hs  Interface.hs  Main.hs  State.hs  World.hs
dph-examples/real/Visibility/Geometry/: Intersection.hs  Segment.hs
dph-examples/smoke/Concat/: Main.hs  Solver.hs
dph-examples/spectral/QuickHull/c/: Main.c
dph-examples/spectral/QuickHull/dph/: Main.hs  QuickHullVect.hs
dph-examples/spectral/QuickSort/dph/: Main.hs  QuickSortVect.hs
dph-examples/spectral/SMVM/c/: smvm.c
dph-examples/spectral/SMVM/dph/: Main.hs  SMVMVectorised.hs
dph-lifted-boxed/: dph-lifted-boxed.cabal
dph-lifted-boxed/Data/Array/Parallel/: PArr.hs  PArray.hs
dph-lifted-copy/: dph-common.cabal  dph-lifted-copy.cabal
dph-lifted-copy/Data/Array/: Parallel.hs
dph-lifted-copy/Data/Array/Parallel/: PArr.hs  PArray.hs  Prelude.hs  Prim.hs
dph-lifted-vseg/: dph-lifted-vseg.cabal
dph-lifted-vseg/Data/Array/: Parallel.hs
dph-lifted-vseg/Data/Array/Parallel/: Lifted.hs  PArr.hs  PArray.hs  Prelude.hs  Prim.hs  Trace.hs  VectDepend.hs
dph-lifted-vseg/examples/: Sums.hs
dph-lifted-vseg/examples/smvm/: SMVMVectorised.hs
dph-plugin/: dph-plugin.cabal
dph-plugin/DPH/: Pipeline.hs  Plugin.hs
dph-plugin/DPH/Core/: Pretty.hs
dph-plugin/DPH/Pass/: Dump.hs  Summon.hs
dph-prim-interface/: dph-prim-interface.cabal
dph-prim-interface/Data/Array/Parallel/: Unlifted.hs
dph-prim-interface/interface/: DPH_Header.h  DPH_Interface.h
dph-prim-par/: dph-prim-par.cabal
dph-prim-par/Data/Array/Parallel/: Unlifted.hs
dph-prim-par/examples/: Test.hs
dph-prim-seq/: dph-prim-seq.cabal
dph-prim-seq/Data/Array/Parallel/: Unlifted.hs
dph-prim-seq/include/: fusion-phases.h
dph/Data/Array/: Parallel.hs
dph/Data/Array/Parallel/: Lifted.hs  PArray.hs  Prelude.hs  Unlifted.hs
(+695 files in other folders)
