name:           ndp
version:        1.0
license:        BSD3
author:         Manuel Chakravarty
homepage:       http://www.cse.unsw.edu.au/~chak/project/dph/
category:       Data Structures
build-depends:  base
synopsis:       Data structures for Nested Data-Parallel Haskell.
exposed-modules:
	Data.Array.Parallel
	Data.Array.Parallel.Unlifted
        Data.Array.Parallel.Unlifted.Distributed
        Data.Array.Parallel.Unlifted.Parallel
ghc-options: -fglasgow-exts -fbang-patterns -O2 -funbox-strict-fields 
             -fliberate-case-threshold100 -fdicts-cheap -fno-method-sharing
             -threaded -fno-cse -haddock
