name:           ndp
version:        0.1
license:        BSD3
author:         Manuel M T Chakravarty, Gabriele Keller, Roman Leshchinskiy
maintainer:     Roman Leshchinskiy <rl@cse.unsw.edu.au>
homepage:       http://www.cse.unsw.edu.au/~chak/project/dph/
category:       Data Structures
build-depends:  base, array, random, ghc-prim
synopsis:       Data structures for Nested Data-Parallel Haskell.
exposed-modules:
	Data.Array.Parallel
	Data.Array.Parallel.Unlifted
        Data.Array.Parallel.Unlifted.Distributed
        Data.Array.Parallel.Unlifted.Parallel
        Data.Array.Parallel.Lifted
        Data.Array.Parallel.Base.Closure
        Data.Array.Parallel.Prelude
        Data.Array.Parallel.Prelude.Int
        Data.Array.Parallel.Prelude.Double
other-modules:
	Data.Array.Parallel.Base.Config
	Data.Array.Parallel.Base.Debug
	Data.Array.Parallel.Base.Hyperstrict
        Data.Array.Parallel.Base.Text
        Data.Array.Parallel.Base.Rebox
        Data.Array.Parallel.Base
        Data.Array.Parallel.Stream.Flat.Stream
        Data.Array.Parallel.Stream.Flat.Basics
        Data.Array.Parallel.Stream.Flat.Combinators
        Data.Array.Parallel.Stream.Flat.Enum
        Data.Array.Parallel.Stream.Flat.Random
        Data.Array.Parallel.Stream.Flat.Search
        Data.Array.Parallel.Stream.Flat
        Data.Array.Parallel.Stream.Segmented
        Data.Array.Parallel.Stream
	Data.Array.Parallel.Arr.BUArr
	Data.Array.Parallel.Arr.BBArr
        Data.Array.Parallel.Arr
        Data.Array.Parallel.Unlifted.Distributed.Gang
        Data.Array.Parallel.Unlifted.Distributed.TheGang
        Data.Array.Parallel.Unlifted.Distributed.DistST
	Data.Array.Parallel.Unlifted.Distributed.Types
        Data.Array.Parallel.Unlifted.Distributed.Combinators
        Data.Array.Parallel.Unlifted.Distributed.Scalars
        Data.Array.Parallel.Unlifted.Distributed.Arrays
        Data.Array.Parallel.Unlifted.Distributed.Basics
	Data.Array.Parallel.Unlifted.Flat.UArr
        Data.Array.Parallel.Unlifted.Flat.Stream
        Data.Array.Parallel.Unlifted.Flat.Basics
        Data.Array.Parallel.Unlifted.Flat.Enum
        Data.Array.Parallel.Unlifted.Flat.Subarrays
        Data.Array.Parallel.Unlifted.Flat.Combinators
        Data.Array.Parallel.Unlifted.Flat.Sums
        Data.Array.Parallel.Unlifted.Flat.Permute
        Data.Array.Parallel.Unlifted.Flat.Text
        Data.Array.Parallel.Unlifted.Flat.Random
        Data.Array.Parallel.Unlifted.Flat.Search
        Data.Array.Parallel.Unlifted.Flat
        Data.Array.Parallel.Unlifted.Segmented.USegd
	Data.Array.Parallel.Unlifted.Segmented.SUArr
        Data.Array.Parallel.Unlifted.Segmented.Stream
        Data.Array.Parallel.Unlifted.Segmented.Basics
        Data.Array.Parallel.Unlifted.Segmented.Subarrays
        Data.Array.Parallel.Unlifted.Segmented.Combinators
        Data.Array.Parallel.Unlifted.Segmented.Sums
        Data.Array.Parallel.Unlifted.Segmented.Permute
        Data.Array.Parallel.Unlifted.Segmented.Text
        Data.Array.Parallel.Unlifted.Segmented
        Data.Array.Parallel.Unlifted.Parallel.Combinators
        Data.Array.Parallel.Unlifted.Parallel.Sums
        Data.Array.Parallel.Unlifted.Parallel.Basics
        Data.Array.Parallel.Unlifted.Parallel.UPArr
        Data.Array.Parallel.Unlifted.Parallel.Permute
        Data.Array.Parallel.Unlifted.Parallel.Enum
        Data.Array.Parallel.Unlifted.Parallel.Segmented
        Data.Array.Parallel.Unlifted.Parallel.Subarrays
        Data.Array.Parallel.Lifted.PArray
        Data.Array.Parallel.Lifted.Unboxed
        Data.Array.Parallel.Lifted.Prim
        Data.Array.Parallel.Lifted.Repr
        Data.Array.Parallel.Lifted.Closure
        Data.Array.Parallel.Lifted.Instances
        Data.Array.Parallel.Lifted.Combinators
        Data.Array.Parallel.Prelude.Base.Int
        Data.Array.Parallel.Prelude.Base.Double
        Data.Array.Parallel.Prelude.Base.Bool
        Data.Array.Parallel.Prelude.Base.PArr
        Data.Array.Parallel.Prelude.Base.Tuple
        Data.Array.Parallel.Prelude.Base
        Data.Array.Parallel.Prelude.Bool
extra-source-files:
        include/fusion-phases.h
include-dirs:
        include
extensions: TypeFamilies, BangPatterns
ghc-options: -fglasgow-exts -O2 -funbox-strict-fields 
             -fdicts-cheap -fno-method-sharing -fno-spec-constr-threshold
             -fmax-simplifier-iterations10  -haddock
             -fcpr-off -package-name ndp


