Name:           dph-base
Version:        0.4.0
License:        BSD3
License-File:   LICENSE
Author:         Manuel M T Chakravarty, Gabriele Keller, Roman Leshchinskiy
Maintainer:     Roman Leshchinskiy <rl@cse.unsw.edu.au>
Homepage:       http://www.cse.unsw.edu.au/~chak/project/dph/
Category:       Data Structures
Synopsis:       Basic Definitions for Data-Parallel Haskell.

Cabal-Version:  >= 1.2.3
Build-Type:     Simple

Flag DTrace
  Description: Enable experimental support for dtrace-based profiling
  Default:     False

Library
  Exposed-Modules:
        Data.Array.Parallel.Base
        Data.Array.Parallel.Arr
        Data.Array.Parallel.Stream
        Data.Array.Parallel.Base.DTrace

  Other-Modules:
        Data.Array.Parallel.Base.Config
        Data.Array.Parallel.Base.Debug
        Data.Array.Parallel.Base.Hyperstrict
        Data.Array.Parallel.Base.Util
        Data.Array.Parallel.Base.Text
        Data.Array.Parallel.Base.Rebox
        Data.Array.Parallel.Stream.Flat.Stream
        Data.Array.Parallel.Stream.Flat.Basics
        Data.Array.Parallel.Stream.Flat.Combinators
        Data.Array.Parallel.Stream.Flat.Enum
        Data.Array.Parallel.Stream.Flat.Random
        Data.Array.Parallel.Stream.Flat.Search
        Data.Array.Parallel.Stream.Flat
        Data.Array.Parallel.Stream.Segmented
        Data.Array.Parallel.Arr.BUArr
        Data.Array.Parallel.Arr.BBArr

  Include-Dirs:
        include

  Install-Includes:
        fusion-phases.h

  Exposed: True

  if flag(DTrace)
    CPP-Options: -DDPH_ENABLE_DTRACE
    Extra-Libraries: dph-trace
    Extra-Lib-Dirs: /Users/rl/projects/ndp/dtrace

  Extensions: TypeFamilies, GADTs, RankNTypes,
              BangPatterns, MagicHash, UnboxedTuples, TypeOperators
  GHC-Options: -funbox-strict-fields -haddock -fcpr-off
  if impl(ghc >= 6.9)
    GHC-Options: -Odph
  else
    GHC-Options: -O2 -fdicts-cheap -fno-method-sharing

  Build-Depends:  base >= 3 && < 5, array, random
  if impl(ghc >= 6.9)
    Build-Depends: ghc-prim

