Name:           dph-base
Version:        0.5
License:        BSD3
License-File:   LICENSE
Author:         Manuel M T Chakravarty, Gabriele Keller, Roman Leshchinskiy
Maintainer:     Roman Leshchinskiy <rl@cse.unsw.edu.au>
Homepage:       http://www.cse.unsw.edu.au/~chak/project/dph/
Category:       Data Structures
Synopsis:       Basic Definitions for Data-Parallel Haskell.

Cabal-Version:  >= 1.2.3
Build-Type:     Simple

Flag DTrace
  Description: Enable experimental support for dtrace-based profiling
  Default:     False

Library
  Exposed-Modules:
        Data.Array.Parallel.Base
        Data.Array.Parallel.Stream
        Data.Array.Parallel.Base.DTrace
        Data.Array.Parallel.Base.TracePrim

  Other-Modules:
        Data.Array.Parallel.Base.Config
        Data.Array.Parallel.Base.Debug
        Data.Array.Parallel.Base.Util
        Data.Array.Parallel.Base.Text

  Include-Dirs:
        include

  Install-Includes:
        fusion-phases.h

  Exposed: True

  if flag(DTrace)
    CPP-Options: -DDPH_ENABLE_DTRACE
    Extra-Libraries: dph-trace
    Extra-Lib-Dirs: /Users/rl/projects/ndp/ghc-inline/libraries/dph/dtrace

  Extensions: TypeFamilies, GADTs, RankNTypes,
              BangPatterns, MagicHash, UnboxedTuples, TypeOperators, CPP
  GHC-Options: -funbox-strict-fields -fcpr-off
  if impl(ghc >= 6.9)
    GHC-Options: -Odph
  else
    GHC-Options: -O2 -fdicts-cheap -fno-method-sharing

  Build-Depends:  base >= 3 && < 5, array, random, vector >= 0.7 && < 0.8
  if impl(ghc >= 6.9)
    Build-Depends: ghc-prim

