Name:           dph-common-vseg
Version:        0.5.1.1
License:        BSD3
License-File:   LICENSE
Author:         The DPH Team
Maintainer:     Ben Lippmeier <benl@cse.unsw.edu.au>
Homepage:       http://www.haskell.org/haskellwiki/GHC/Data_Parallel_Haskell
Category:       Data Structures
Synopsis:       Data structures for the Data Parallel Haskell vectoriser

Cabal-Version:  >= 1.6
Build-Type:     Simple

Library
  Exposed-Modules:
        Data.Array.Parallel.PArray.PData.Base
        Data.Array.Parallel.PArray.PData.Scalar
        Data.Array.Parallel.PArray.PData.Nested

  Extensions:
        TypeFamilies, GADTs, RankNTypes, CPP,
        BangPatterns, MagicHash, UnboxedTuples, TypeOperators

  GHC-Options: 
        -Odph 
        -funbox-strict-fields
        -fcpr-off
  
  CPP-Options:
        -cpp
        -DINLINE_PA='INLINE'
        -DINLINE_PDATA='INLINE'

  Build-Depends:  
        base             == 4.4.*,
        ghc              == 7.*,
        array            == 0.3.*,
        random           == 1.0.*,
        template-haskell == 2.6.*,
        pretty           == 1.1.*,
        vector           == 0.7.*,
        dph-base         == 0.5.*,
        dph-prim-par     == 0.5.*

