


Name:                dph-examples
Version:             0.5
License:             BSD3
License-file:        LICENSE
Author:              The DPH Team
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.8
Stability:           experimental
Category:            Data Structures
Homepage:            http://www.cse.unsw.edu.au/~chak/project/dph/
Description:         Examples using the DPH library.
Synopsis:            Examples using the DPH library.

Flag gloss
 Description:        Enable graphical front ends that use the gloss library.
 Default:            False

-- With these examples, 
--   the plain dph-NAME versions are parallel versions built against dph-par
--   while the dph_NAME-seq versions are sequential ones built against dph-seq

-- Sum of Squares -------------------------------------------------------------
Executable dph-sumsq
  Build-depends:  base == 4.*, vector == 0.7.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-par == 0.5.*, random == 1.0.*, old-time == 1.0.*
  Main-is:        Main.hs
  hs-source-dirs: lib imaginary/SumSquares/dph
  ghc-options:    -rtsopts -threaded -Odph -fdph-par -fcpr-off -fsimplifier-phases=4 -fstrictness-before=3

Executable dph-sumsq-seq
  Build-depends:  base == 4.*, vector == 0.7.*, dph-base == 0.5.*, dph-prim-seq == 0.5.*, dph-seq == 0.5.*, random == 1.0.*, old-time == 1.0.*
  Main-is:        Main.hs
  hs-source-dirs: lib imaginary/SumSquares/dph
  ghc-options:    -rtsopts -threaded -Odph -fdph-seq -fcpr-off -fsimplifier-phases=4 -fstrictness-before=3


-- Dot Product ----------------------------------------------------------------
Executable dph-dotp
  Build-depends:  base == 4.*, vector == 0.7.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-par == 0.5.*, random == 1.0.*, old-time == 1.0.*
  Main-is:        Main.hs
  hs-source-dirs: lib imaginary/DotProduct/dph
  ghc-options:    -rtsopts -threaded -Odph -fdph-par -fcpr-off -fsimplifier-phases=4 -fstrictness-before=3

Executable dph-dotp-seq
  Build-depends:  base == 4.*, vector == 0.7.*, dph-base == 0.5.*, dph-prim-seq == 0.5.*, dph-seq == 0.5.*, random == 1.0.*, old-time == 1.0.*
  Main-is:        Main.hs
  hs-source-dirs: lib imaginary/DotProduct/dph
  ghc-options:    -rtsopts -threaded -Odph -fdph-seq -fcpr-off -fsimplifier-phases=4 -fstrictness-before=3


-- Evens ----------------------------------------------------------------------
Executable dph-evens
  Build-depends:  base == 4.*, vector == 0.7.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-par == 0.5.*, random == 1.0.*, old-time == 1.0.*
  Main-is:        Main.hs
  hs-source-dirs: imaginary/Evens lib
  ghc-options:    -rtsopts -threaded -Odph -fdph-par -fcpr-off -fsimplifier-phases=4 -fstrictness-before=3

Executable dph-evens-seq
  Build-depends:  base == 4.*, vector == 0.7.*, dph-base == 0.5.*, dph-prim-seq == 0.5.*, dph-seq == 0.5.*, random == 1.0.*, old-time == 1.0.*
  Main-is:        Main.hs
  hs-source-dirs: imaginary/Evens lib
  ghc-options:    -rtsopts -threaded -Odph -fdph-seq -fcpr-off -fsimplifier-phases=4 -fstrictness-before=3


-- QuickHull ------------------------------------------------------------------
Executable dph-quickhull
  Build-depends:  base == 4.*, vector == 0.7.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-par == 0.5.*, random == 1.0.*, old-time == 1.0.*
  Main-is:        Main.hs
  hs-source-dirs: lib spectral/QuickHull/dph spectral/QuickHull/lib
  ghc-options:    -rtsopts -threaded -Odph -fdph-par -fcpr-off -fsimplifier-phases=4 -fstrictness-before=3

Executable dph-quickhull-seq
  Build-depends:  base == 4.*, vector == 0.7.*, dph-base == 0.5.*, dph-prim-seq == 0.5.*, dph-seq == 0.5.*, random == 1.0.*, old-time == 1.0.*
  Main-is:        Main.hs
  hs-source-dirs: lib spectral/QuickHull/dph spectral/QuickHull/lib
  ghc-options:    -rtsopts -threaded -Odph -fdph-seq -fcpr-off -fsimplifier-phases=4 -fstrictness-before=3

Executable dph-quickhull-vector
  Build-depends: 
        base          == 4.*,
        vector        == 0.7.*,    
        old-time      == 1.0.*,
        random        == 1.0.*
  Main-is:        Main.hs
  hs-source-dirs: lib spectral/QuickHull/vector spectral/QuickHull/lib
  ghc-options:    -rtsopts -threaded -Odph -fdph-par -fcpr-off -fsimplifier-phases=4 -fstrictness-before=3


-- QuickSort ------------------------------------------------------------------
Executable dph-quicksort
  Build-depends:  base == 4.*, vector == 0.7.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-par == 0.5.*, random == 1.0.*, old-time == 1.0.*
  Main-is:        Main.hs
  hs-source-dirs: lib spectral/QuickSort/dph
  ghc-options:    -rtsopts -threaded -Odph -fdph-par -fcpr-off -fsimplifier-phases=4 -fstrictness-before=3

-- This one stalls in SpecConstr then eventually runs out of memory.
-- Executable dph-quicksort-seq
--  Build-depends:  base == 4.*, vector == 0.7.*, dph-base == 0.5.*, dph-prim-seq == 0.5.*, dph-seq == 0.5.*, random == 1.0.*, old-time == 1.0.*
--  Main-is:        Main.hs
--  hs-source-dirs: lib spectral/QuickSort/dph
--  ghc-options:    -rtsopts -threaded -Odph -fdph-seq -fcpr-off -fsimplifier-phases=4 -fstrictness-before=3


-- NBody ----------------------------------------------------------------------
Executable dph-nbody
  Main-is:        Main.hs
  if flag(gloss)
    Build-depends:  base == 4.*, vector == 0.7.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-par == 0.5.*, random == 1.0.*, old-time == 1.0.*, parseargs == 0.1.*, gloss == 1.2.*
    hs-source-dirs: lib real/NBody real/NBody/Gloss
    ghc-options:    -rtsopts -threaded -Odph -fdph-par -fcpr-off -fsimplifier-phases=4 -fstrictness-before=3
  else
    Build-depends:  base == 4.*, vector == 0.7.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-par == 0.5.*, random == 1.0.*, old-time == 1.0.*, parseargs == 0.1.*
    hs-source-dirs: lib real/NBody real/NBody/Batch
    ghc-options:    -rtsopts -threaded -Odph -fdph-par -fcpr-off -fsimplifier-phases=4 -fstrictness-before=3
  endif

Executable dph-nbody-seq
  Main-is:        Main.hs
  if flag(gloss)
    Build-depends:  base == 4.*, vector == 0.7.*, dph-base == 0.5.*, dph-prim-seq == 0.5.*, dph-seq == 0.5.*, random == 1.0.*, old-time == 1.0.*, parseargs == 0.1.*, gloss == 1.2.*
    hs-source-dirs: lib real/NBody real/NBody/Gloss
    ghc-options:    -rtsopts -threaded -Odph -fdph-seq -fcpr-off -fsimplifier-phases=4 -fstrictness-before=3
  else
    Build-depends:  base == 4.*, vector == 0.7.*, dph-base == 0.5.*, dph-prim-seq == 0.5.*, dph-seq == 0.5.*, random == 1.0.*, old-time == 1.0.*, parseargs == 0.1.*
    hs-source-dirs: lib real/NBody real/NBody/Batch
    ghc-options:    -rtsopts -threaded -Odph -fdph-seq -fcpr-off -fsimplifier-phases=4 -fstrictness-before=3
  endif
