


Name:                dph-examples
Version:             0.5.2.0
License:             BSD3
License-file:        LICENSE
Author:              The DPH Team
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.8
Stability:           experimental
Category:            Data Structures
Homepage:            http://www.haskell.org/haskellwiki/GHC/Data_Parallel_Haskell
Description:         Examples using Data Parallel Haskell
Synopsis:            Examples using Data Parallel Haskell

-- Flag gloss
-- Description:        Enable graphical front ends that use the gloss library.
-- Default:            False

-- With these examples, 
--   the plain dph-NAME versions are parallel versions built against dph-par
--   while the dph_NAME-seq versions are sequential ones built against dph-seq

-- Sum of Squares -------------------------------------------------------------
Executable dph-sumsq
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*
  Main-is:        Main.hs
  other-modules:  SumSquaresVector
                  SumSquaresVectorised
                  Timing Randomish
  hs-source-dirs: lib imaginary/SumSquares/dph
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


-- Dot Product ----------------------------------------------------------------
Executable dph-dotp
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*
  Main-is:        Main.hs
  other-modules:  DotProductVector
                  DotProductVectorised
                  Timing Randomish
  hs-source-dirs: lib imaginary/DotProduct/dph
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


-- Evens ----------------------------------------------------------------------
Executable dph-evens
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*
  Main-is:        Main.hs
  other-modules:  EvensVector
                  EvensVectorised
                  Timing Randomish
  hs-source-dirs: imaginary/Evens/dph lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


-- Primes ---------------------------------------------------------------------
-- Primes dies with a bounds check error
Executable dph-primes
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*
  Main-is:        Main.hs
  hs-source-dirs: imaginary/Primes lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


-- Reverse --------------------------------------------------------------------
Executable dph-reverse
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*
  Main-is:        Main.hs
  other-modules:  ReverseVector
                  ReverseVectorised
                  Util Timing Randomish
  hs-source-dirs: imaginary/Reverse/dph lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


-- Words ---------------------------------------------------------------------
Executable dph-words
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*
  Main-is:        Main.hs
  hs-source-dirs: imaginary/Words lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


-- SMVM ---------------------------------------------------------------------
Executable dph-smvm
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*
  Main-is:        Main.hs
  other-modules:  SMVMVectorised
                  Timing
  hs-source-dirs: spectral/SMVM/dph lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


-- QuickHull ------------------------------------------------------------------
Executable dph-quickhull
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*
  Main-is:        Main.hs
  other-modules:  QuickHullVect
                  Timing Points2D.Types SVG
  hs-source-dirs: lib spectral/QuickHull/dph spectral/QuickHull/lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


Executable dph-quickhull-vector
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*
  Main-is:        Main.hs
  other-modules:  QuickHullIO
                  QuickHullSplit
                  QuickHullVector
                  Timing Points2D.Types SVG
  hs-source-dirs: lib spectral/QuickHull/vector spectral/QuickHull/lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


-- QuickSort ------------------------------------------------------------------
Executable dph-quicksort
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*
  Main-is:        Main.hs
  other-modules:  QuickSortVect
                  Timing
  hs-source-dirs: lib spectral/QuickSort/dph
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


-- NBody ----------------------------------------------------------------------
-- Executable dph-nbody-gloss
--     Main-is:        MainGloss.hs
--     other-modules:  Common.Dump Common.World Common.Body Common.Util 
--                     Solver Solver.ListBH.Solver
--                            Solver.NestedBH.Solver
--                            Solver.VectorBH.Solver
--                            Solver.VectorNaive.Solver
--                     Timing Points2D.Types Points2D.Generate
--                     Gloss.MainArgs Gloss.Draw Gloss.Config
--     Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, parseargs == 0.1.*, gloss == 1.3.*
--     hs-source-dirs: lib real/NBody real/NBody/Gloss
--     ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000 -fno-liberate-case


-- Executable dph-nbody-batch
--    Main-is:        MainBatch.hs
--    other-modules:  Common.Dump Common.World Common.Body Common.Util 
--                    Solver Solver.ListBH.Solver
--                           Solver.NestedBH.Solver
--                           Solver.VectorBH.Solver
--                           Solver.VectorNaive.Solver
--                    Timing Points2D.Types Points2D.Generate
--                    Batch.MainArgs Batch.Config
--    Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, parseargs == 0.1.*
--    hs-source-dirs: lib real/NBody real/NBody/Batch
--    ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000 -fno-liberate-case

